--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/metropolis.min.css%22");
 
 body {
-  background-color: #e5e5e5;
+  background-color: #fbfbfb;
   font-family: "Metropolis";
   font-style: normal;
 }
@@ -26,6 +26,7 @@ body {
   margin-top: 30px;
   font-size: 1rem;
   margin-right: 16px;
+  line-height: 1.3;
 }
 .continer {
   display: flex;
@@ -55,6 +56,8 @@ body {
   margin-right: 16px;
   margin-left: 16px;
   color: #696969;
+    line-height: 1.5;
+
 }
 
 /* media query */
