Building blog page  and style relate #20

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,4 +1,4 @@
-@import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/metropolis.min.css%22");
+@import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/metropolis.min.css");
 
 body {
   background-color: #fbfbfb;
